style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    min-height: 100vh;
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
    justify-content: center;
    text-align: center;
    background-color: lightgray;
}

.container {
    width: 100%;
    max-width: 500px;
    padding: 20px;
}

.game-wrapper {
    background-color:white;
    border-radius: 10px;
    padding: 30px;
    text-align: center;
}

h1 {
    font-size: 12;
    margin-bottom: 25px;
    color: black;
}

.board {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(4, 1fr);
    gap: 10px;
    width: 100%;
    aspect-ratio: 1 /1;
    max-width: 420px;
    margin: 0 auto 20px;
    padding: 10px;
    perspective: 1000px;
    border-radius: 10px;
}

.card {
    position: relative;
    background-color: lightblue;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
    font-weight: bold;
    cursor: pointer;
    transition: transform 0.6s;
    user-select: none;
    transform-style: preserve-3d;
}

.card.flipped {
    transform: rotateY(180deg);    
}

.card.matched {
    transform: rotateY(180deg);
}

.card .front,
.card .back {
    position: absolute;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 12px;
    border: 3px solid lightblue;
    font-size: 2.5rem;
    font-weight: bold;
}

.card .back {
    background-color: lightblue;
    color: darkblue;
}

.card .front {
    background-color: white;
    color: darkblue;
    transform: rotateY(180deg);
}

#moves {
    display: flex;    
    justify-content: center;
    align-items: center;
    gap: 20px;
    font-size: 1.2rem;
    margin-bottom: 15px;
    color: black;
}

#moves span{
    font-weight: 600;
}

#message {
    font-size: 1.5rem;
    margin: 20px 0;
    min-height: 50px;
    font-weight: bold;
    color: green;
}

#reset {
    padding: 10px 20px;
    font-size: 1rem;
    border: none;
    border-radius: 5px;
    background-color: darkblue;
    color: white;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

#reset:hover {
    transition: scale(1.05);
}

select {
    padding: 6px;
    margin-bottom: 15px;
    font-size: 1rem;
    border-radius: 5px;
    color: blue;
    border-color: blue;
}

